# lamine.github.io

./: .gitignore  AGRO_AI_Weather_data.ipynb  Dockerfile  Makefile  PR_FINAL_UPDATE.md  PR_LAUNCH_254.md  README.md  _headers  _redirects  agroai.py  config.yml  deploy-marker-oauth-connectors-20260703.txt  evaluate_model.py  headers.txt  incident_response.md  index.html  main  main.py  main.tf  observability.md  outputs.tf  outreach-live-demo-patch-error.txt  provider.tf  rbac_example.py  render-field-intelligence-staging.yaml  render.yaml  requirements.txt  soc2_control_matrix.csv  train_model.py  wrangler.local-ai.toml  wrangler.toml
.github/: wave46-recovery-deploy-trigger
agroai/: analysis.py  baselines.py  charts.py  engine.py  report.py  run_simulation.py
agroai_api/: .env.demo.example  .env.example  .env.staging.example  .env.whatsapp.example  .gitignore  BUILD_REVISION  BUILD_REVISION_20260706_2  CHANGELOG.md  CLAUDE_INSTRUCTIONS.md  DELIVERABLES.md  DEPLOY_TRIGGER_20260706.txt  Dockerfile  ENTERPRISE_DELIVERY_SUMMARY.md  Makefile  PRODUCTION_HARDENING.md  README_API.md  WISECONN_INTEGRATION.md  __init__.py  alembic.ini  app.py  docker-compose.yml  pytest.ini  readline.py  requirements-enterprise.txt  requirements.txt  sitecustomize.py  start-production.sh  verify-production-migration.sh
assets/: AGRO_AI_Weather_data.ipynb  index-DkW-IVxp.js  index-DqDiDnEd.css
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/agroai_platform/: __init__.py  client.py
sdk/python/examples/: private_beta.py
sdk/python/tests/: test_client.py
(+1498 files in other folders)
